<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">
<!-- DCJStart -->
    <string name="app_name">DCJmobile</string>
    <string name="products">Продукты</string>
    <string name="menu">Меню</string>
    <string name="diary">Дневник</string>
    <string name="coefsets">Коэф-ты</string>
    <string name="settings">Настройки</string>
 	   
<!-- AboutBox -->    
    <string name="aboutBoxText">Программа DiaCalc\nвариант для андроида.\nАвтор Connie\nСайт программы:\nhttp://diacalc.org</string>
    <string name="aboutBoxTitle">О программе</string>

<!-- Common names -->	
	<string name="btnOk">Ладно</string>
	<string name="btnNo">Не пойдет</string>
	<string name="Cancel">Отмена</string>

<!-- Settings form -->
    <string name="lblSettingsLogin">Логин</string>
    <string name="lblSettingsServer">Сервер</string>
    <string name="lblSettingsPass">Пароль</string>
    <string name="tabSettingsInet">Интернет</string>
    <string name="tabSettingsBlood">Кровь</string>
    <string name="tabSettingsMenu">Меню</string>
    <string name="textSettingsRound">Округление</string>
    <string name="rbtnSettingsOne">до 1 ед.</string>
    <string name="rbtnSettingsOnehalf">до 0.5 ед.</string>
    <string name="lblSettingsTargetSh">Целевой СК</string>
    <string name="lblSettingsLowSh">min СК</string>
    <string name="lblSettingsHiSh">max СК</string>
    <string name="lblSettingsWholeBlood">Цельная</string>
    <string name="lblSettingsPlasmaBlood">Плазма</string>
    <string name="lblSettingsMmolBlood">ммоль/л</string>
    <string name="lblSettingsMgdlBlood">мг/дл</string>
    <string name="lblSettingsTextCoefTime">Коэффициенты</string>
    <string name="lblchBxSettingsCoefTime">рассчитывать по времени</string>
    <string name="spinnerSettingsMenuInfo">Информация в меню</string>
    <string-array name="menuSettingsInfoVariants">
        <item>Б-Ж-У-ГИ</item>
        <item>ХЕ</item>
        <item>Калории</item>
        <item>Доза</item>
    </string-array>
    <string-array name="menuSettingsKoefVariants">
		<item name="1">до 1 ед.</item>
		<item name="2">до 0.5 ед.</item>
		<item name="3">до 0.1 ед.</item>
		<item name="4">до 0.05 ед.</item>
	</string-array>

<!-- Menu form -->
	<string name="MenuBD">БД:</string>
	<string name="MenuMD">МД:</string>
	<string name="MenuSum">∑:</string> 
	<string name="MenuInfo">Инф:</string>
    <string name="main_no_items">База пустая</string>
    <string name="k1">k1</string>
    <string name="k2">k2</string>
    <string name="k3">ЦЕИ</string>
    <string name="BE">ХЕ</string>
    <string name="gramm">г.</string>
    <string name="calor">ккал</string>
    <string name="sugar1">СК1</string>
    <string name="sugar2">СК2</string>
    <string name="weightGr">Вес г.</string>
    <string name="SugarSource">СК старт</string>
    <string name="SugarTarget">СК цель</string>
    <string name="sugarFastAlert">Не рекомендуется слишком быстро снижать СК\nРекомендуемое значение целевого СК</string> 
    
    <string name="SugarDialogTitle">Ввод сахаров</string>
    <string name="RoundDialogTitle">Округление дозы</string>
    <string name="Weight">Вес</string>
    <string name="roundTo">Округляем до</string>
    
    <string name="pleaseWait">Пожалуйста подождите</string>
    <string name="menuLoading">Загружаем меню</string>
    <string name="errorTitle">Ошибка</string>
    <string name="errorMsgMenuLoad">При загрузке меню произошли ошибки</string>
    <string name="menuLoadedTitle">Меню загружено</string>
    <string name="menuLoadedMsg">Меню загружено удачно\nзаменить текущее меню?</string>
    <string name="snackLoadedMsg">Загружен перекус, он будет добавлен в основное меню</string>
    <string name="errorMsgMenuUpload">При выгрузке меню произошли ошибки</string>
    <string name="menuUploadedTitle">Меню выгружено</string>
    <string name="menuUploadedMsg">Меню выгружено успешно</string>
    <string name="menuUploading">Выгружаем меню</string>
<!-- Menu context menu -->
	<string name="deleteRowMenu">Удалить продукт из меню</string>
	<string name="roundDoseMenu">Округлить дозу</string>
<!-- Menu menu -->	
	<string name="deleteOldMenu">Удалить старые</string>
	<string name="clearMenu">Очистить</string>
	<string name="storeMenu">Сохранить в дневник</string>
	<string name="loadMenu">Загрузить меню</string>
	<string name="uploadMenu">Выгрузить меню</string>
	<string name="createProdMenu">Создать продукт</string>
	<string name="productRowMenu">Продукт</string>
<!-- Products menu -->
	<string name="productSubMenu">Продукт</string>
	<string name="changeProduct">Изменить продукт</string>
	<string name="createProduct">Создать продукт</string>
	<string name="deleteProduct">Удалить продукт</string>
	<string name="groupSubMenu">Группа</string>
	<string name="changeGroup">Изменить группу</string>
	<string name="createGroup">Создать группу</string>
	<string name="deleteGroup">Удалить группу</string>
	<string name="searchInProducts">Поиск</string>
	<string name="downloadProducts">Загрузить</string>
	<string name="uploadProducts">Выгрузить</string>
	<string name="inetProdSubMenu">Интернет</string>
	
	<string name="moveLeft">&lt;&lt;</string>
	<string name="moveRight">&gt;&gt;</string>
	<string name="prodsLoading">Загружаем продукты</string>
	<string name="errorMsgProdsLoad">При загрузке продуктов произошли ошибки</string>
	<string name="prodsLoadedTitle">Продукты</string>
	<string name="prodsLoadedMsg">Продукты загружены</string>
	<string name="noGroups">====</string>
	<string name="Delete">Удалить</string>
<!-- Диалог создания/изменения продукта -->
	<string name="textProductName">Наименование</string>
	<string name="textProductWeight">Вес:</string>
	<string name="textProductProt">Б:</string>
	<string name="textProductFat">Ж:</string>
	<string name="textProductCarb">У:</string>
	<string name="textProductGI">ГИ:</string>
	<string name="spinnerProductPromt">Выбор группы</string>
	<string name="gramms">г.</string>
	<string name="productName">Наименование</string>
	<string name="newProduct">Новый продукт</string>
	<string name="editProduct">Изменить продукт</string>
	<string name="SaveBottom">Сохранить</string>
	<string name="loadDataFromInet">Загрузить/Выгрузить</string>
	<string name="UploadDownload">Загрузить/Выгрузить</string>
	<string name="Product">Продукт</string>
	<string name="id1">8-5-96-6</string>
	<string name="addProdinMenu">+</string>
	<string name="no_records">нет данных</string>
	<string name="search_hint">Поиск</string>
	<string name="text">text</string>
	<string name="spinnerSettingsMenuKoef">Выберите точность округления</string>
	<string name="time">время</string>
	<string name="puttime">Ввести время</string>
	<string name="btnMenuCoefTimeOk">Ввести время</string>
	
</resources>
