<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >

   			 <TextView
   			     android:id="@+id/tvTime"
   			     android:layout_width="wrap_content"
   			     android:layout_height="wrap_content"
   			     android:text="@string/time"
   			     android:textSize="22sp" >

			</TextView>

			<Button
			    android:id="@+id/btnMenuCoefTimeOk"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginLeft="130dp"
			    android:gravity="center_vertical|center_horizontal"
			    android:hint="@string/btnMenuCoefTimeOk"
			    android:scrollHorizontally="false"
			    android:text="@string/btnMenuCoefTimeOk" 
			    android:onClick="btnMenuCoefTimeOk"/>

   	</LinearLayout>

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

	<TextView
	    android:id="@+id/lblMenuDlgK1"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignBaseline="@id/editMenuDlgK1"
	    android:layout_gravity="center_vertical|center_horizontal"
	    android:layout_toLeftOf="@id/editMenuDlgK1"
	    android:layout_weight="45"
	    android:text="@string/k1"
	    android:textSize="@dimen/TestSizeMenu" />

	<org.diacalc.android.components.FloatEditText
    	android:id="@+id/editMenuDlgK1"
    	android:layout_height="wrap_content"
    	android:layout_width="180dip"
    	android:inputType="numberDecimal"
    	android:text="1.05"
    />

	</LinearLayout>

	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >

<TextView
    android:id="@+id/lblMenuDlgK2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBaseline="@id/editMenuDlgK2"
    android:layout_marginRight="6dip"
    android:layout_toLeftOf="@id/editMenuDlgK2"
    android:layout_weight="40"
    android:text="@string/k2"
    android:textSize="@dimen/TestSizeMenu" />

    <org.diacalc.android.components.FloatEditText 
    	android:id="@+id/editMenuDlgK2"
    	android:layout_height="wrap_content"
    	android:layout_width="180dip"
    	android:inputType="numberDecimal"
    	
    	android:layout_below="@id/editMenuDlgK1"
    	android:layout_alignParentRight="true"
    	
    	android:text="0.05"
    />
    
   </LinearLayout>
   
   <LinearLayout
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal" >
    
    <TextView
        android:id="@+id/lblMenuDlgBE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/editMenuDlgBE"
        android:layout_marginRight="6dip"
        android:layout_toLeftOf="@id/editMenuDlgBE"
        android:layout_weight="40"
        android:text="@string/k3"
        android:textSize="@dimen/TestSizeMenu" />

    <org.diacalc.android.components.FloatEditText
        android:id="@+id/editMenuDlgOUV"
        android:layout_width="180dip"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/editMenuDlgK2"
        android:inputType="numberDecimal"
        android:text="10" 
        />

</LinearLayout>
    
<Button
    android:id="@+id/btnMenuCoefWriteOk"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentRight="true"
    android:layout_below="@id/editMenuDlgBE"
    android:text="@string/btnOk" />

<EditText
    android:id="@+id/tvTime"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:ems="10"
    android:inputType="time" >

    <requestFocus />
</EditText>

</LinearLayout>